# AID_WEB_backend

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.prod  Dockerfile.test  Pipfile  README.md  docker-compose.prod.yaml  docker-compose.test.yaml  docker-compose.yaml  pyproject.toml  run_server.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: api_test.yml  deploy.yaml  test.yaml
app/: main.py
app/api/: __init__.py  auth.py  study.py  user.py
app/backend/: main.py  utils.py
app/core/: __init__.py  security.py  settings.py  utils.py
app/crud/: study.py  user.py
app/database/: mongodb.py
app/models/: __init__.py  study.py  user.py
app/schemas/: auth.py  study.py  user.py
app/templates/: base.html  faq.html  home.html  login.html  nav.html  sender.html  submission_detail.html  submission_list.html  submit.html
app/test/: user_test.py
auth/: authenticate.py  hash_password.py
backend/: main.py  test_main.py  utils.py
backend/api/: __init__.py  api.py
backend/core/: __init__.py  settings.py
backend/crud/: __init__.py  submit.py  user.py
backend/database/: __init__.py  mongodb.py
backend/scheme/: __init__.py  submit.py  user.py
config/: deploy.sh  deploy_test.sh  nginx.conf  nginx.prod.conf  nginx.test.conf
docs/: README.md  cloud_setting.md  dev_rule.md  local_setting.md  system_architecture.md
templates/: admin.html  base.html  home.html  login.html  submission_detail.html  submission_list.html  submit.html
test/: test.py  test.txt  test_Ju.txt  test_jimin.txt  test_main.py  test_seoyeon.txt  text_gh.txt
(+35 files in other folders)
